testdata/baselines/reference/submodule/conformance/jsDeclarationsImportTypeBundled.errors.txt
folder/mod1.js(8,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== folder/mod1.js (1 errors) ====
    /**
     * @typedef {{x: number}} Item
     */
    /**
     * @type {Item};
     */
    const x = {x: 12};
    module.exports = x;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
==== index.js (0 errors) ====
    /** @type {(typeof import("./folder/mod1"))[]} */
    const items = [{x: 12}];
    module.exports = items;